Fix alignment and wrapping issue with language picker

--- a/app/components/ui/language-picker/styles.scss
+++ b/app/components/ui/language-picker/styles.scss
@@ -19,7 +19,8 @@
 	color: $gray-dark;
 	cursor: pointer;
 	font-size: 1.4rem;
-	margin-top: 15px;
+	margin-top: 18px;
+	white-space: nowrap;
 }
 
 .select {
